force-app/main/default/objects/NS_Invoice_Line_Item__c/fields/Item_Master_Product__c.field-meta.xml
<CustomField>
    <fullName>Item_Master_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Master Product</label>
    <referenceTo>Item_Master_Product__c</referenceTo>
    <relationshipLabel>NS Invoice Line Items</relationshipLabel>
    <relationshipName>NS_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>