force-app/main/default/objects/NS_Invoice_Line_Item__c/fields/Related_OSA__c.field-meta.xml
<CustomField>
    <fullName>Related_OSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related OSA</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>NS Invoice Line Items</relationshipLabel>
    <relationshipName>NS_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>