force-app/main/default/objects/NS_Invoice_Line_Item__c/fields/Rev_Rec_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Start_Date__c</fullName>
    <label>Rev Rec Start Date</label>
    <type>Date</type>
</CustomField>